Added HoverMenu, and fix bugs from designer

--- a/src/blocks/components/banner-ask-question/_banner-ask-question.scss
+++ b/src/blocks/components/banner-ask-question/_banner-ask-question.scss
@@ -39,6 +39,13 @@
   }
 
   & .button {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    font-size: 20px;
     border: none;
+
+    @include md-block {
+      font-size: 16px;
+    }
   }
 }
