--- a/src/blocks/modules/header/header.pug
+++ b/src/blocks/modules/header/header.pug
@@ -18,12 +18,12 @@ header.header
                     if !isAuth
                         .header__personal-area-icon
                             button(data-modal-type='auth-register' data-modal-tab='auth').button.button-gray.header__sign-in.js-modal-open Войти
-                            a(href="#", data-modal-type='ask-question').button-black.header__ask-question.js-modal-open Задать вопрос
+                            a(href="#", data-modal-type='ask-question').button.button-black.header__ask-question.js-modal-open Задать вопрос
                         +personal-auto('Выберите автомобиль')
                     else
                         .header__personal-area-icon
                             include ../../components/personal-area-icon/personal-area-icon
-                            a(href="#", data-modal-type='ask-question').button-black.header__ask-question.js-modal-open Задать вопрос
+                            a(href="#", data-modal-type='ask-question').button.button-black.header__ask-question.js-modal-open Задать вопрос
                         +personal-auto('Mazda 323 III (BF) 1985 - 1989')
 
     include ../../components/mobile-menu/mobile-menu
