--- a/src/blocks/modules/personal-area/personal-area.pug
+++ b/src/blocks/modules/personal-area/personal-area.pug
@@ -9,7 +9,7 @@ section.personal-area
         .personal-area__conteiner.js-tabs
             .personal-area__tabs.js-tabs-content
                 .personal-area__tabs-content
-                    ul
+                    ul.hover-menu.js-hover-menu
                         li
                             a(class='active' data-tab-menu='info' href="#") Личные данные
                         li
