--- a/src/styles/helpers/_ui-kit.scss
+++ b/src/styles/helpers/_ui-kit.scss
@@ -54,6 +54,12 @@
     font-size: 20px;
     color: $blue;
     text-decoration: none;
+    border-bottom: 1px solid transparent;
+    @include transition();
+
+    &:hover {
+        border-bottom: 1px solid $blue;
+    }
 }
 
 iframe {
