--- a/src/styles/helpers/_variables.scss
+++ b/src/styles/helpers/_variables.scss
@@ -20,6 +20,7 @@ $input-placeholder: #ABABAB;
 $header-bg: $yellow;
 $header-menu-bg: $dark-gray;
 $header-menu-color: $white;
+$header-menu-color-hover: $yellow;
 
 // Search
 $search-bgc: $white;
@@ -31,6 +32,7 @@ $search-button-bgc: $dirty-white;
 $footer-bg: $white;
 $footer-border: #E0E0E0;
 $footer-color-menu: $dark-gray;
+$footer-color-menu-hover: rgba(21, 21, 43, 0.7);
 
 // Logo
 $logo-text: $gray;
