--- a/src/blocks/components/card/_card.scss
+++ b/src/blocks/components/card/_card.scss
@@ -45,16 +45,28 @@
       width: 100%;
       height: 100%;
       border-radius: 8px;
+      @include transition(.3s, ease-in-out);
     }
   }
 
   &__title {
     margin-top: 20px;
     margin-bottom: 10px;
-    color: #16162d;
+    color: $dark-gray;
     font-weight: normal;
     font-size: 18px;
     line-height: 25px;
+    @include transition(.3s, ease-in-out);
+  }
+
+  &:hover &__img {
+    &:before {
+      background: transparent;
+    }
+  }
+
+  &:hover &__title {
+    color: $blue;
   }
 
   &__mark {
@@ -94,13 +106,8 @@
         }
       }
 
-
       @include md-block {
         margin-bottom: 30px;
-
-
-
-
       }
 
       @include sm-block {
@@ -125,6 +132,7 @@
     &__border-line {
       border-bottom: 3px solid #E7E7E7;
       margin-bottom: 25px;
+      padding-bottom: 25px;
     }
   }
 }
