--- a/src/blocks/components/menu/_menu.scss
+++ b/src/blocks/components/menu/_menu.scss
@@ -17,7 +17,16 @@
     font-size: 18px;
     padding: 15px 0;
     color: $header-menu-color;
+    @include transition(0.2s);
     @include lg(font-size, 15px);
+
+    &:hover {
+      color: $header-menu-color-hover;
+    }
+
+    &.active {
+      color: $header-menu-color-hover;
+    }
 
     & img {
       max-width: 40px;
