--- a/src/blocks/components/select/select.scss
+++ b/src/blocks/components/select/select.scss
@@ -38,6 +38,12 @@
     }
   }
 
+  &.select2-container--below {
+    & .select2-selection__rendered {
+      color: $base-color-text;
+    }
+  }
+
   &.select2-container--open {
     &  .select2-selection--single {
       border: 1px solid #127AEF;
