--- a/src/blocks/components/sub-menu/_sub-menu.scss
+++ b/src/blocks/components/sub-menu/_sub-menu.scss
@@ -19,6 +19,12 @@
       font-weight: normal;
       font-size: 15px;
       color: $sub-menu-item;
+
+      @include transition(0.2s, ease-in-out, opacity);
+
+      &:hover {
+        opacity: .7;
+      }
     }
   }
 }
