--- a/src/styles/helpers/_mixins.scss
+++ b/src/styles/helpers/_mixins.scss
@@ -12,6 +12,14 @@
     height: 0;
 }
 
+@mixin transition($time: .3s, $type: ease-in-out, $prop: all) {
+    -webkit-transition: $time $type $prop;
+    -moz-transition: $time $type $prop;
+    -ms-transition: $time $type $prop;
+    -o-transition: $time $type $prop;
+    transition: $time $type $prop;
+}
+
 .close {
     position: relative;
     width: 32px;
