--- a/src/pages/faq.pug
+++ b/src/pages/faq.pug
@@ -13,7 +13,7 @@ block content
 			+breadcrumbs(breadcrumbs)
 			h1=title
 			include ../blocks/components/filter/filter
-			.section__container
+			.section__container.section__container_flex
 				.section__main
 					.card-question-list.section__border-line
 						for question in questions
