--- a/src/pages/home-not-auth.pug
+++ b/src/pages/home-not-auth.pug
@@ -20,7 +20,7 @@ block content
 	section.section.section-gray
 		.container
 			h2.h2 Вопросы и ответы
-			.section__container
+			.section__container.section__container_flex
 				.section__main
 					.card-question-list
 						for question in questions
