--- a/src/blocks/components/card/_card.scss
+++ b/src/blocks/components/card/_card.scss
@@ -80,11 +80,13 @@
   }
 
   &-list {
-    @include row-flex();
+    //@include row-flex();
+    display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
 
     & .card {
-      @include col();
+      //@include col();
       margin-bottom: 35px;
 
       &:nth-last-child(3),
