--- a/src/blocks/components/services/services.pug
+++ b/src/blocks/components/services/services.pug
@@ -1,11 +1,14 @@
 .services
     a(href="#").services__item
-        img(src="img/sprites/intermediate-svg/icon-service-repair.svg", alt="")
+        .services__img
+            img(src="img/sprites/intermediate-svg/icon-service-repair.svg", alt="")
         span Ремонт автомобиля
     a(href="#").services__item
-        img(src="img/sprites/intermediate-svg/icon-service-maintenance.svg", alt="")
+        .services__img
+            img(src="img/sprites/intermediate-svg/icon-service-maintenance.svg", alt="")
         span Техобслуживание
     a(href="#").services__item
-        img(src="img/sprites/intermediate-svg/icon-service-consumables.svg", alt="")
+        .services__img
+            img(src="img/sprites/intermediate-svg/icon-service-consumables.svg", alt="")
         span Расходные материалы
 
