--- a/src/blocks/modules/modals/_modals.scss
+++ b/src/blocks/modules/modals/_modals.scss
@@ -317,23 +317,23 @@
     }
 
 
-    &__select-horisontal {
-        display: flex;
-
-        @include md-block {
-            flex-direction: column;
-        }
-
-        & .select2 {
-            margin-right: 20px;
+    &__select {
+        &-item {
+            width: #{calc(100% / 3 - 20px)};
             margin-bottom: 0;
 
             @include md-block {
+                width: 100%;
                 margin-bottom: 20px;
             }
+        }
 
-            &:last-child {
-                margin-right: 0;
+        &-horisontal {
+            display: flex;
+            justify-content: space-between;
+    
+            @include md-block {
+                flex-direction: column;
             }
         }
     }
