--- a/src/styles/general/_base.scss
+++ b/src/styles/general/_base.scss
@@ -118,10 +118,13 @@ main {
     }
 
     &__container {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
         margin-top: 40px;
+
+        &_flex {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+        }
 
         @include md-block {
             margin-top: 20px;
