Added Validation and Ajax

--- a/src/blocks/modules/personal-area/personal-area.pug
+++ b/src/blocks/modules/personal-area/personal-area.pug
@@ -23,7 +23,7 @@ section.personal-area
                     a(href="#").personal-area__logout Выйти
             .personal-area__content
                 .personal-area__tab-item.active(data-tab-item='info')
-                    form.personal-area__info(action='' method='POST')
+                    form.personal-area__form-info(action='' method='POST')
                         input(name='name' type='text' placeholder='Как к вам обращаться?')
                         input(name='email' type='email' placeholder='Электронная почта')
                         h3.personal-area__h3 Сменить пароль
