--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,7 @@
 @import "helpers/variables";
 @import "libs";
 @import "helpers/mixins";
+@import "helpers/validator";
 @import "helpers/ui-kit";
 @import "general/fonts";
 @import "general/base";
