--- a/src/blocks/components/select/select.pug
+++ b/src/blocks/components/select/select.pug
@@ -1,5 +1,14 @@
-mixin select(options, nameSelect, jsSelector = "js-select")
-    select(name=nameSelect class=['select', jsSelector])
+mixin select(options, nameSelect, jsSelector = "js-select", data = false)
+    -
+        var dataAttr = {};
+        if (data) {
+            for (var item in data) {
+                dataAttr[`data-${item}`]=data[item];
+            }
+
+        }
+
+    select(name=nameSelect class=['select', jsSelector])&attributes(dataAttr)
         for option, key in options
             - var attributes = {};
             if key === 0
