--- a/src/blocks/modules/modals/_modals.scss
+++ b/src/blocks/modules/modals/_modals.scss
@@ -15,6 +15,19 @@
             padding: 20px 25px 30px;
         }
     }
+    
+    & label {
+        position: relative;
+        display: block;
+        padding-bottom: 20px;
+
+        & > .select2,
+        & > input:not([type=radio]),
+        & > input:not([type=checkbox]),
+        & > textarea {
+            margin-bottom: 0;
+        }
+    }
 
     & a {
         font-style: normal;
