--- a/src/blocks/modules/modals/ask-question.pug
+++ b/src/blocks/modules/modals/ask-question.pug
@@ -29,19 +29,25 @@ include ../../components/select/select
         .close.modal__close.js-modal-close
         .modal__title Задать вопрос
         .modal__text Не нашлось нужной публикации? Специалисты готовы поделиться своими знаниями. Спрашивай!
-        .modal__block
-            .modal__text Ваш автомобиль
-            form(action='', method='post').modal__form-ask-question
-                +select(optionsMark, 'mark', 'js-modal-select')
-                +select(optionsModel, 'model', 'js-modal-select')
-                +select(optionsGeneration, 'generation', 'js-modal-select')
+        form(action=`${jsonServer}/ask-question`, method='post').validator.js-ajax-ask-question
+            .modal__block
+                .modal__text Ваш автомобиль
+                .modal__form-ask-question
+                    label
+                        +select(optionsMark, 'mark', ['js-modal-select', 'js-ajax-select-car'], {"validator-require": "true", action: `${jsonServer}/marks`})
+                    label
+                        +select(optionsModel, 'model', ['js-modal-select', 'js-ajax-select-car'], {"validator-require": "true", action: `${jsonServer}/models`})
+                    label
+                        +select(optionsGeneration, 'generation', ['js-modal-select', 'js-ajax-select-car'], {"validator-require": "true", action: `${jsonServer}/generation`})
 
-        .modal__block
-            .modal__text Ваш вопрос
-            input(name='question', type='text', placeholder='Заголовок вопроса')
-            textarea(name="textarea", placeholder="Текст вопроса")
-        .modal__hulf
-            button.button.button-yellow.button__send Отправить
-            .modal__policy
-                | Нажимая на кнопку, Вы соглашаетесь на обработку
-                a(href='#')=' персональных данных'
+            .modal__block
+                .modal__text Ваш вопрос
+                label
+                    input(name='question', type='text', placeholder='Заголовок вопроса', data-validator-require="true")
+                label
+                    textarea(name="textarea", placeholder="Текст вопроса", data-validator-require="true")
+            .modal__hulf
+                button(type='submit').button.button-yellow.button__send Отправить
+                .modal__policy
+                    | Нажимая на кнопку, Вы соглашаетесь на обработку
+                    a(href='#')=' персональных данных'
