--- a/src/blocks/modules/personal-area/_personal-area.scss
+++ b/src/blocks/modules/personal-area/_personal-area.scss
@@ -147,7 +147,8 @@
         }
     }
 
-    &__info {
+    &__info,
+    &__form-info {
         padding-right: 10px;
         width: 85%;
         box-sizing: border-box;
@@ -181,6 +182,12 @@
                 max-width: 100%;
             }
         }
+    }
+
+    &__form-info {
+        max-width: 396px;
+        width: 100%;
+        box-sizing: border-box;
     }
 
     &__auto {
