Fix bug in modal select car and faq detail

--- a/src/blocks/modules/modals/_modals.scss
+++ b/src/blocks/modules/modals/_modals.scss
@@ -352,6 +352,11 @@
     }
 
     &__radio-list {
+        & .label_checkbox {
+            display: inline-block;
+            padding-bottom: 0;
+        }
+
         @include md-block {
             display: flex;
             flex-direction: column;
