--- a/src/pages/faq-detail.pug
+++ b/src/pages/faq-detail.pug
@@ -13,7 +13,7 @@ block content
         .container
             +breadcrumbs(breadcrumbs)
             h1=title
-            .section__container.question__section
+            .section__container.section__container_flex.question__section
                 .section__main
                     include ../blocks/components/question/question
                 .section__sidebar
