--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,7 +3,7 @@
 @import "helpers/mixins";
 @import "helpers/validator";
 @import "helpers/ui-kit";
-@import "general/fonts";
+//@import "general/fonts";
 @import "general/base";
 @import "../blocks/components/components";
 @import "../blocks/modules/modules";
