--- a/src/blocks/components/comment/comment.pug
+++ b/src/blocks/components/comment/comment.pug
@@ -16,7 +16,7 @@
             answer: 'Иван Сидоров'
         },
         {
-            img: 'img/comments.jpg',
+            img: 'img/no-avatar.svg',
             name: 'Иван Сидоров',
             date: '03.04.2019',
             text: 'Видел такой сервис... ключевые заголовки на странице меняются под поисковый запрос. Не думал, что это тайна вообще',
