--- a/src/pages/ui-kit.pug
+++ b/src/pages/ui-kit.pug
@@ -4,4 +4,25 @@ block variables
 
 block content
     .container
+        .text
+            h1 Заголовок h1
+            h2 Заголовок h2
+            h3 Заголовок h3
+
+            p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam aspernatur consequuntur corporis debitis deleniti deserunt doloremque, eius est itaque optio quae quo repellat sit soluta temporibus tenetur ullam veniam voluptate. Lorem ipsum dolor sit amet, consectetur adipisicing elit. A animi consequatur dicta, doloremque dolorum eius eum in ipsam laudantium necessitatibus nulla quasi quibusdam quidem quod recusandae, repellat repellendus tempore voluptas.
+            p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus ipsum maiores neque perspiciatis totam veritatis? Adipisci aspernatur autem culpa cum laudantium magni quas sed sit, tenetur voluptatum? Aliquam, blanditiis totam.
+
+            ul
+                li Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet aperiam natus neque! Accusamus aliquam animi blanditiis commodi corporis dolorum eveniet hic magnam,
+                    |
+                    a(href='#') Ссылка
+                    |
+                    | minima nihil non odit quam ratione rem sed? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, dicta error. Accusamus alias aperiam at, cum eaque eos eveniet incidunt laboriosam minus pariatur quia repudiandae sint. Corporis deserunt fuga libero.
+                li Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquid animi at autem consequatur cum dolor, ea eaque eligendi fugiat illo neque nostrum officia quo sequi sit veniam vitae? Sunt.
+                li Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, distinctio dolorem eos est id ipsa, ipsum iste magnam maiores maxime modi odit ratione repellendus rerum temporibus. Dolorem eos modi praesentium!
+                    |
+                    a(href='#') Ссылка
+
+            img(src="img/articles-auto1.jpg", alt="")
+            | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam cumque illo praesentium repellat. Accusamus corporis explicabo illum, libero nam porro quia quidem? At debitis fugiat fugit iusto possimus recusandae voluptate.
         include ../blocks/components/button/button
