--- a/src/blocks/components/article-detail/_article-detail.scss
+++ b/src/blocks/components/article-detail/_article-detail.scss
@@ -38,7 +38,8 @@
     width: 100%;
 }
 
-.article-content {
+.article-content,
+.text {
     padding-top: 50px;
     margin: auto;
     max-width: 844px;
@@ -55,6 +56,12 @@
     & a {
         color: $dark-gray;
         text-decoration: none;
+        border-bottom: 1px solid $yellow;
+        @include transition(0.2s);
+
+        &:hover {
+            border-bottom: 1px solid transparent;
+        }
     }
 
     & p {
@@ -89,8 +96,13 @@
         width: 100%;
     }
 
-    & ul {
+    & > ul {
         list-style-type: none;
+        margin-bottom: 30px;
+
+        @include md-block {
+            margin-bottom: 20px;
+        }
 
         & li {
             position: relative;
@@ -126,12 +138,60 @@
     }
 }
 
+.text {
+    & h1 {
+        line-height: 140%;
+        font-weight: 500;
+        font-size: 40px;
+        margin:0 0 20px 0;
+
+        @include md-block {
+            font-size: 28px;
+            line-height: 39px;
+            margin-bottom: 15px;
+        }
+    }
+
+    & h2 {
+        font-weight: 500;
+        font-size: 30px;
+        line-height: 42px;
+        margin: 0 0 18px 0;
+
+        @include md-block {
+            font-size: 24px;
+            line-height: 34px;
+            margin-top: 15px;
+            margin-bottom: 10px;
+        }
+    }
+
+    & h3 {
+        font-weight: 500;
+        font-size: 24px;
+        line-height: 140.62%;
+        margin: 0 0 14px 0;
+
+        @include md-block {
+            margin-bottom: 8px;
+        }
+    }
+}
+
 .article-bottom {
     display: flex;
     justify-content: space-between;
     align-items: center;
 
     &__item {
+
+        & a {
+            border: none;
+
+            &:hover {
+                border: none;
+            }
+        }
         @include sm-block {
             margin-bottom: 25px;
 
