--- a/src/blocks/modules/modals/restore-password.pug
+++ b/src/blocks/modules/modals/restore-password.pug
@@ -3,8 +3,9 @@
         .close.modal__close.js-modal-close
         .modal__title Восстановить пароль
         .modal__text Введите адрес электронной почты, указанный при регистрации. Вы получите письмо со ссылкой для создания нового пароля.
-        form(action='', method='post').modal__form-auth
-            input(name='email', type='text', placeholder='Электронная почта')
+        form(action='', method='post').modal__form-auth.js-ajax-restore-password
+            label
+                input(name='email', type='text', placeholder='Электронная почта', data-validator-require="true", data-validator-type="email")
             button(type='submit').button.button-yellow.modal__button-restore-password Восстановить пароль
         .modal__link-list
             a(href='javascript:void(0)' data-modal-type='auth-register' data-modal-tab='auth').js-modal-open Вход с паролем
