Added success message in modal

--- a/src/blocks/modules/modals/ask-question.pug
+++ b/src/blocks/modules/modals/ask-question.pug
@@ -29,7 +29,7 @@ include ../../components/select/select
         .close.modal__close.js-modal-close
         .modal__title Задать вопрос
         .modal__text Не нашлось нужной публикации? Специалисты готовы поделиться своими знаниями. Спрашивай!
-        form(action=`${jsonServer}/ask-question`, method='post').validator.js-ajax-ask-question
+        form(action='', method='post').validator.js-ajax-ask-question
             .modal__block
                 .modal__text Ваш автомобиль
                 .modal__form-ask-question
