--- a/src/blocks/modules/header/header.pug
+++ b/src/blocks/modules/header/header.pug
@@ -1,5 +1,6 @@
 include ../../components/personal-auto/personal-auto
 include ../../components/search/search
+include ../../components/personal-area-icon/personal-area-icon
 header.header
     .header__inner
         .container
@@ -15,16 +16,17 @@ header.header
                     include ../../components/sub-menu/sub-menu
                     +search('Поиск по сайту', true)
                 .header__right
-                    if !isAuth
+                    if isAuth
                         .header__personal-area-icon
-                            button(data-modal-type='auth-register' data-modal-tab='auth').button.button-gray.header__sign-in.js-modal-open Войти
-                            a(href="#", data-modal-type='ask-question').button.button-black.header__ask-question.js-modal-open Задать вопрос
-                        +personal-auto('Выберите автомобиль')
+                            +personal-area-icon()
+                            a(href="#", data-modal-type='ask-question').button.button-black.header__ask-question.button-pen-adaptive.js-modal-open Задать вопрос
+                        +personal-auto('Mazda 323 III (BF) 1985 - 1989')
                     else
                         .header__personal-area-icon
-                            include ../../components/personal-area-icon/personal-area-icon
-                            a(href="#", data-modal-type='ask-question').button.button-black.header__ask-question.js-modal-open Задать вопрос
-                        +personal-auto('Mazda 323 III (BF) 1985 - 1989')
+                            button(data-modal-type='auth-register' data-modal-tab='auth').button.button-gray.header__sign-in.js-modal-open Войти
+                            a(href="#", data-modal-type='ask-question').button.button-black.header__ask-question.button-pen-adaptive.js-modal-open Задать вопрос
+                        +personal-auto('Выберите автомобиль')
+
 
     include ../../components/mobile-menu/mobile-menu
     .header__menu
