--- a/src/blocks/modules/header/_header.scss
+++ b/src/blocks/modules/header/_header.scss
@@ -27,6 +27,13 @@
     @include sm-block {
       flex-wrap: wrap;
     }
+
+    & .personal-auto,
+    & .personal-area-icon {
+      @include lg-block {
+        display: none;
+      }
+    }
   }
 
   &__logo {
@@ -89,6 +96,11 @@
   & .search {
     max-width: 520px;
     width: 100%;
+    @include lg-block {
+      &__form {
+        height: 36px;
+      }
+    }
     @include sm-block {
       max-width: 100%;
       margin-top: 7px
@@ -108,14 +120,15 @@
   &__sign-in {
     padding-top: 8px;
     padding-bottom: 8px;
-    margin-left: 12px;
+    margin-left: 20px;
     font-size: 15px;
-    @include lg(display, none);
+
   }
 
   &__sign-in {
     padding-right: 20px;
     padding-left: 20px;
+    @include lg(display, none);
   }
 
   &__personal-area-icon {
@@ -123,7 +136,7 @@
     justify-content: flex-end;
     align-items: center;
     margin-top: 15px;
-    @include lg(margin-top, 0)
+    @include lg(margin-top, 0);
   }
 
   // Menu
