--- a/src/styles/helpers/_variables.scss
+++ b/src/styles/helpers/_variables.scss
@@ -1,20 +1,20 @@
 // Colors
-$yellow: #FFD223;
-$very-light-gray: #ABABAB; //TODO: дать нормальное имя
+$yellow: #ffd223;
+$very-light-gray: #ababab; //TODO: дать нормальное имя
 $light-gray: #777777;
 $gray: #333333;
-$dark-gray: #16162D;
-$white: #FFFFFF;
-$dirty-white: #EBEBEB; //TODO: дать нормальное имя
-$blue: #127AEF;
+$dark-gray: #16162d;
+$white: #ffffff;
+$dirty-white: #ebebeb; //TODO: дать нормальное имя
+$blue: #127aef;
 
 // Text
 $base-color-text: $gray;
 
 // Input
-$input-bg: #EFF1F4;
+$input-bg: #eff1f4;
 $input-color: #333333;
-$input-placeholder: #ABABAB;
+$input-placeholder: #ababab;
 
 // Header
 $header-bg: $yellow;
@@ -30,9 +30,9 @@ $search-button-bgc: $dirty-white;
 
 // Footer
 $footer-bg: $white;
-$footer-border: #E0E0E0;
+$footer-border: #e0e0e0;
 $footer-color-menu: $dark-gray;
-$footer-color-menu-hover: rgba(21, 21, 43, 0.7);
+$footer-color-menu-hover: $blue;
 
 // Logo
 $logo-text: $gray;
@@ -41,7 +41,7 @@ $logo-text: $gray;
 $sub-menu-item: $gray;
 
 // Personal area
-$personal-area-border: #E0E0E0;
+$personal-area-border: #e0e0e0;
 
 // Personal icon area
 $personal-area-icon-bg: $dirty-white;
@@ -54,18 +54,17 @@ $filter-main-title: $dark-gray;
 
 // Section bgc
 $section-white: $white;
-$section-gray: #F3F3F3;
+$section-gray: #f3f3f3;
 
 // Select
-$gray-theme: #EFF1F4;
+$gray-theme: #eff1f4;
 
 // Marks and models
-$model-title: #BDBDBD;
+$model-title: #bdbdbd;
 
 // Hint
 $hint-bgc: $blue;
 $hint-color: $white;
-$hint-color-message: #625F5F;
-$hint-color-required: #EB5757;
+$hint-color-message: #625f5f;
+$hint-color-required: #eb5757;
 $hint-color-italic: #919191;
-
