--- a/src/blocks/components/question/question.pug
+++ b/src/blocks/components/question/question.pug
@@ -1,3 +1,4 @@
+include ../share/share
 .question
     .question__top
         .question__title
@@ -15,4 +16,4 @@
             .question__text
                 | Попробуйте перед установкой поддона нанести потолще слой герметика, 2-3 мм толщиной. Только сразу не затягивайте - дайте ему немного загустеть. А потом равномерно, по такому же принципу как затягиваете ГБЦ, постепенно, притяните поддон. Только тяните не со всей силы! Ваша задача плотно прижать его, а не затянуть!
 
-    include ../share/share
+    +share()
