--- a/src/blocks/components/button/_button.scss
+++ b/src/blocks/components/button/_button.scss
@@ -18,7 +18,7 @@ button,
     display: inline-block;
     padding: 14px 35px;
     background: #3e3e41;
-    border: 1px solid rgba(255, 255, 255, 0.18);
+    border: none;
     box-sizing: border-box;
     box-shadow: inset 0px -2px 0px rgba(0, 0, 0, 0.4);
     border-radius: 4px;
@@ -65,7 +65,7 @@ button,
     display: inline-block;
     padding: 14px 35px;
     background: $yellow;
-    border: 1px solid rgba(255, 255, 255, 0.18);
+    border: none;
     box-sizing: border-box;
     box-shadow: inset 0px -2px 0px rgba(0, 0, 0, 0.4);
     border-radius: 4px;
@@ -77,13 +77,11 @@ button,
 
     &:hover {
         background: #F2C208;
-        border: 1px solid rgba(255, 255, 255, 0.18);
         box-shadow: inset 0px -2px 0px rgba(0, 0, 0, 0.4);
     }
 
     &:active {
         background: #F2C208;
-        border: 1px solid rgba(255, 255, 255, 0.18);
         box-shadow: none;
     }
 }
@@ -92,7 +90,7 @@ button,
     display: inline-block;
     padding: 14px 23px;
     background: $dirty-white;
-    border: 1px solid rgba(255, 255, 255, 0.18);
+    border: none;
     box-sizing: border-box;
     box-shadow: inset 0px -2px 0px rgba(0, 0, 0, 0.4);
     border-radius: 4px;
@@ -104,13 +102,11 @@ button,
 
     &:hover {
         background: #d7d7d7;
-        border: 1px solid rgba(255, 255, 255, 0.18);
         box-shadow: inset 0px -2px 0px rgba(0, 0, 0, 0.4);
     }
 
     &:active {
         background: #d7d7d7;
-        border: 1px solid rgba(255, 255, 255, 0.18);
         box-shadow: none;
     }
 }
