--- a/src/blocks/components/share-list/_share-list.scss
+++ b/src/blocks/components/share-list/_share-list.scss
@@ -15,6 +15,10 @@
     padding: 0 !important;
     margin-right: 10px !important;
 
+    &:last-child {
+      margin-right: 0 !important;
+    }
+
     &:before {
       content: none;
     }
