--- a/src/blocks/components/sub-menu/_sub-menu.scss
+++ b/src/blocks/components/sub-menu/_sub-menu.scss
@@ -20,7 +20,7 @@
             font-size: 15px;
             color: $sub-menu-item;
 
-            @include transition(0.2s, ease-in-out, opacity);
+            @include transition(0.2s, ease-in-out, color);
 
             &:hover {
                 color: $blue;
